<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Mot de pass</string>
    <string name="don_t_have_account_sign_up" translatable="false">Don\'t have account? Sign Up</string>
    <string name="login" translatable="false">se connecter</string>
    <string name="my_profile">Profile</string>
    <string name="sell">sell</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="share" translatable="false">share</string>
    <string name="Hdida">Welcome to Hdida</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation Drawer</string>
    <string name="coming_soon" translatable="false">Coming Soon..</string>
    <string name="home">Home</string>
    <string name="title" translatable="false">Title</string>
    <string name="feedback">Feedback</string>
    <string name="Welcome_to_Hdida">Welcome to Hdida</string>
    <string name="intro" translatable="false">Platform pour vent et achat des voitures d\'occation.</string>
    <string name="our_team" translatable="false">Realisateur</string>
    <string name="s" translatable="false">"Name    :    SRENNOU Mohamed          <br /> email       :    simosrennou@gmail.com  <br /> tel   :    +212 689438990 "</string>
    <string name="forgot_pass" translatable="false">Mot de pass oublier? Reset</string>
    <string name="go_back" translatable="false">Go back</string>
    <string name="reset_pass" translatable="false">Reset Password</string>
    <string name="lang">English</string>
    <string name="mode">mode</string>
    <string name="quitter">Leave</string>
    <string name="nom" translatable="false">Nom</string>
    <string name="ville" translatable="false">City</string>
    <string name="Kilometrage" translatable="false">Kilométrage</string>
    <string name="annee_modele" translatable="false">Model year</string>
    <string name="type_carbu" translatable="false">Fuel type</string>
    <string-array name="marque">
        <item>Abarth</item>
        <item>Alfa Romeo</item>
        <item>Alpine</item>
        <item>Aston Martin</item>
        <item>Audi</item>
        <item>Bentley</item>
        <item>BMW</item>
        <item>Bmw Alpina</item>
        <item>Cadillac</item>
        <item>Caterham</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroën</item>
        <item>Cupra</item>
        <item>Dacia</item>
        <item>Daihatsu</item>
        <item>Dodge</item>
        <item>Donkervoort</item>
        <item>DS</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Genesis	</item>
        <item>Honda</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Isuzu</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>KIA</item>
        <item>KTM</item>
        <item>Lada</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Lotus</item>
        <item>Lynk</item>
        <item>Maserati</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mercedes-Benz</item>
        <item>MG</item>
        <item>Mia Electric</item>
        <item>MINI</item>
        <item>Mitsubishi</item>
        <item>Nissan	</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Polestar</item>
        <item>Porsche</item>
        <item>Renault</item>
        <item>Rolls-Royce</item>
        <item>Saab</item>
        <item>Seat</item>
        <item>Skoda</item>
        <item>Smart</item>
        <item>Ssangyong</item>
        <item>Subaru</item>
        <item>Suzuki	</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
    </string-array>
    <string-array name="puissance">
        <item>4 CV</item>
        <item>5 CV</item>
        <item>6 CV</item>
        <item>7 CV</item>
        <item>8 CV</item>
        <item>9 CV</item>
        <item>10 CV</item>
        <item>11 CV</item>
        <item>12 CV</item>
        <item>13 CV</item>
        <item>14 CV</item>
        <item>15 CV</item>
        <item>16 CV</item>
        <item>17 CV</item>
        <item>18 CV</item>
        <item>19 CV</item>
        <item>20 CV</item>
        <item>21 CV</item>
        <item>22 CV</item>
        <item>23 CV</item>
        <item>24 CV</item>
        <item>25 CV</item>
        <item>26 CV</item>
        <item>27 CV</item>
        <item>28 CV</item>
        <item>29 CV</item>
        <item>30 CV</item>
        <item>31 CV</item>
        <item>32 CV</item>
        <item>33 CV</item>
        <item>34 CV</item>
        <item>35 CV</item>
        <item>36 CV</item>
        <item>37 CV</item>
        <item>38 CV</item>
        <item>39 CV</item>
        <item>40 CV</item>
        <item>41 CV</item>
        <item>41 CV+</item>
    </string-array>
    <string name="boite" translatable="false">Gearbox</string>
    <string name="nb_porte" translatable="false">Doors Number</string>
    <string name="main" translatable="false">First user</string>
    <string name="option" translatable="false">Option</string>
    <string name="titre" translatable="false">Titre</string>
    <string name="des" translatable="false">Description</string>
    <string name="prix" translatable="false">Price DH</string>
    <string name="continuer" translatable="false">Continuer</string>
    <string name="modele" translatable="false">Model</string>
    <string name="phone" translatable="false">Phone Number</string>
    <string name="product_price" translatable="false">Car Price</string>
    <string name="enter_price" translatable="false">Enter Price</string>
    <string name="description_optional" translatable="false">Description (optional)</string>
    <string name="short_description" translatable="false">Short Description</string>
    <string name="upload" translatable="false">Upload</string>
    <string name="enter_title" translatable="false">Enter Title</string>
    <string name="car_name" translatable="false">Car Name</string>
    <string name="call" translatable="false">CALL</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="mail" translatable="false">Mail</string>
    <string name="options" translatable="false">Options</string>
    <string name="message" translatable="false">Message</string>
    <string name="communicate">Communicate</string>
    <string-array name="pre_main">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="boite_vitesse">
        <item>Auto</item>
        <item>manual</item>
    </string-array>
    <string-array name="nombre_porte">
        <item>3</item>
        <item>5</item>
    </string-array>
    <string-array name="type_carbus">
        <item>Diesel</item>
        <item>Gasoline</item>
        <item>Electric</item>
        <item>LGP</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="abath_models">
        <item>595 Turismo</item>
        <item>595 Competizione</item>
        <item>595 Scorpioneoro</item>
        <item>595 Monster Energy</item>
        <item>F595</item>
        <item>695 RANGE</item>
        <item>695 70° Anniversario</item>

    </string-array>
    <string-array name="aston_models">
        <item>DB1</item>
        <item>DB2 and later DB2/4</item>
        <item>DB Mark III</item>
        <item>DB4/GT</item>
        <item>DB4 GT Zagato</item>
        <item>DB5</item>
        <item>DB6</item>
        <item>DBS and later V8s</item>
        <item>V8 Zagato</item>
        <item>Virage/V8/Vantage</item>
        <item>DB7/Vantage</item>
        <item>V12 Vanquish/S</item>
        <item>DB7 Zagato coupé/roadster</item>
        <item>DB AR1 roadster</item>
        <item>DB9 coupé/Volante</item>
        <item>V8/V12 Vantage</item>
        <item>DBS V12</item>
        <item>One-77</item>
        <item>Rapide</item>
        <item>Virage</item>
        <item>Cygnet</item>
        <item>V12 Zagato</item>
        <item>Vanquish</item>
        <item>DB11</item>
        <item>Vantage</item>
        <item>DBS Superleggera</item>
    </string-array>
</resources>