<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".frags.SellFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rellayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/Product_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/title"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Product_tag"
            android:layout_marginStart="15dp"
            android:hint="@string/enter_title"
            android:maxLength="55"
            android:maxLines="1"
            android:singleLine="true" />


        <TextView
            android:id="@+id/Image_tag"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_file_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/image_view"
            android:text="select an image "
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_choose_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Image_tag"
            android:layout_marginTop="20dp"
            android:text="choose Image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_below="@+id/button_choose_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/Price_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/image_view"
            android:text="@string/product_price"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_text_file_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Price_tag"
            android:layout_marginStart="15dp"
            android:hint="@string/enter_price"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />

        <TextView
            android:id="@+id/Description_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_file_price"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/description_optional"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Description_tag"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/short_description"
            android:lines="2"
            android:maxLength="400" />

        <TextView
            android:id="@+id/txtkilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Description"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/Kilometrage"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <EditText
            android:id="@+id/edittext_kilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtkilo"
            android:layout_marginStart="15dp"
            android:hint="@string/Kilometrage"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtann"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_kilo"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/annee_modele"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_annee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtann"
            android:layout_marginStart="15dp"
            android:hint="@string/annee_modele"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_annee"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/phone"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtphone"
            android:layout_marginStart="15dp"
            android:hint="@string/phone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/txtcity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edittext_tel"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/ville"
            android:textSize="20dp"
            android:textStyle="bold"

            />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtcity"
            android:layout_marginStart="15dp"
            android:entries="@array/city" />


        <TextView
            android:id="@+id/txttype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_city"

            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/type_carbu"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_carbu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txttype"
            android:layout_marginStart="15dp"
            android:entries="@array/type_carbus"

            />

        <TextView
            android:id="@+id/txtmrque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_carbu"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/marque"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_marque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtmrque"
            android:layout_marginStart="15dp"
            android:entries="@array/marque" />

        <TextView
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_marque"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/modele"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/txtpuiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_model"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/puissance"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_puissance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtpuiss"
            android:layout_marginStart="15dp"
            android:entries="@array/puissance" />

        <TextView
            android:id="@+id/txtboite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_puissance"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/boite"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_boite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtboite"
            android:layout_marginStart="15dp"
            android:entries="@array/boite_vitesse" />

        <TextView
            android:id="@+id/txtnb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_boite"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/nb_porte"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_nbporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtnb"
            android:layout_marginStart="15dp"
            android:entries="@array/nombre_porte" />

        <TextView
            android:id="@+id/txtmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_nbporte"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/main"
            android:textSize="20dp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtmain"
            android:layout_marginStart="15dp"
            android:entries="@array/pre_main" />

        <TextView
            android:id="@+id/txtop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_main"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/options"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_main"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/ic_add_op" />


        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="-4dp" />

        <Button
            android:id="@+id/button_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/upload"

            />


    </RelativeLayout>

</ScrollView>